WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213911
Fix a build error by forward declaring _NSHTTPAlternativeServicesStorage
https://bugs.webkit.org/show_bug.cgi?id=213911
Summary
Fix a build error by forward declaring _NSHTTPAlternativeServicesStorage
Saagar Jha
Reported
2020-07-02 17:51:29 PDT
Fix a build error by forward declaring _NSHTTPAlternativeServicesStorage
Attachments
Patch
(1.51 KB, patch)
2020-07-02 18:17 PDT
,
Saagar Jha
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saagar Jha
Comment 1
2020-07-02 18:17:34 PDT
Created
attachment 403428
[details]
Patch
EWS
Comment 2
2020-07-03 21:56:50 PDT
Committed
r263927
: <
https://trac.webkit.org/changeset/263927
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403428
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-07-03 21:57:14 PDT
<
rdar://problem/65088684
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug