Fix a build error by forward declaring _NSHTTPAlternativeServicesStorage https://bugs.webkit.org/show_bug.cgi?id=213911

Patch by Saagar Jha <saagar@saagarjha.com> on 2020-07-03
Reviewed by Darin Adler.

The public 10.16 SDK does not define _NSHTTPAlternativeServicesStorage, and the interface
declaration comes after it is used. Forward declare it to fix the error.

* pal/spi/cf/CFNetworkSPI.h: Forward declare _NSHTTPAlternativeServicesStorage.

Canonical link: https://commits.webkit.org/226751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263927 268f45cc-cd09-0410-ab3c-d52691b4dbfc